--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/spaghetti.html">Homemade Spaghetti Sauce with Ground Beef</a>
     </body>
 </html>
