--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Homemade Spaghetti Sauce with Ground Beef</h1>
+
+        <a href="../index.html">Home</a>
     </body>
 </html>
