--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="./recipes/spaghetti.html">Homemade Spaghetti Sauce with Ground Beef</a>
+        <ul>
+            <li><a href="./recipes/spaghetti.html">Homemade Spaghetti Sauce with Ground Beef</a></li>
+        </ul>
     </body>
 </html>
