--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,6 +8,41 @@
     <body>
         <h1>Homemade Spaghetti Sauce with Ground Beef</h1>
 
+        <img src="../images/spaghetti.avif" alt="A plate of spaghetti with ground beef sauce" height="682" width="1024">
+
+        <h2>Description</h2>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 pound ground beef</li>
+            <li>1 medium onion, chopped</li>
+            <li>4 cloves garlic, minced</li>
+            <li>1 small green bell pepper, diced</li>
+            <li>1 (28 ounce) can diced tomatoes</li>
+            <li>1 (16 ounce) can tomato sauce</li>
+            <li>1 (6 ounce) can tomato paste</li>
+            <li>2 teaspoons dried oregano</li>
+            <li>2 teaspoons dried basil</li>
+            <li>1 teaspoon salt</li>
+            <li>½ teaspoon ground black pepper</li>
+        </ul>
+
+        <h3>Steps</h3>
+        <ol>
+            <li><strong>Step 1</strong>
+                <p>Gather all ingredients.</p></li>
+            <li><strong>Step 2</strong>
+                <p>Combine ground beef, onion, garlic, and green pepper in a large saucepan over medium-high heat.<br>
+                Cook and stir until meat is browned and crumbly and vegetables are tender, 5 to 7 minutes.<br>
+                Drain grease.</p></li>
+            <li><strong>Step 3</strong>
+                <p>Stir diced tomatoes, tomato sauce, and tomato paste into the pan.<br>
+                Season with oregano, basil, salt, and pepper.<br>
+                Simmer spaghetti sauce for 1 hour, stirring occasionally.</p></li>
+            <li><strong>Step 4</strong></li>
+                <p>Serve hot and enjoy!</p>
+        </ol>
+
         <a href="../index.html">Home</a>
     </body>
 </html>
