--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
+            <li><a href="./recipes/creme-brulee.html">Crème Brûlée</a></li>
             <li><a href="./recipes/spaghetti.html">Homemade Spaghetti Sauce with Ground Beef</a></li>
+            <li><a href="./recipes/vegetable-beef-soup.html">Vegetable Beef Soup</a></li>
         </ul>
     </body>
 </html>
